--- a/dz4/dz5/index.html
+++ b/dz4/dz5/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>ls5</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-$END$
+<div class="cont">
+    <div class="form">
+        <div class="header">
+            <input type="text" id="input" required>
+            <button id="button">Add</button>
+        </div>
+        <div class="list">
+
+        </div>
+        <!--            <div class="list">-->
+        <!--                <div class="todoBlock">-->
+        <!--                    <p>Learn JS!</p>-->
+        <!--                    <div class="actions">-->
+        <!--                        <button class="change">Change</button>-->
+        <!--                        <button class="delete">Delete</button>-->
+        <!--                    </div>-->
+        <!--                </div>-->
+        <!--            </div>-->
+    </div>
+</div>
 </body>
+<script src="nn.js"></script>
 </html>
